tests/suite/fail/generated/types/fail_ne_i32_bool.ny
fn main() {
    let _ = 1 != true //~ ERROR Type mismatch in comparison
}
